@@ -37,7 +37,7 @@
 #ifdef MCU_KINETIS_L
 #include "mcu/sys-mkl27z.h"
 #else
-#include "mcu/sys-stm32.h"
+#include "mcu/sys-stm32f103.h"
 #undef STM32F10X_MD		/* Prepare for high density device, too.  */
 #endif
 #else
@@ -45,7 +45,7 @@
 #if defined (MCU_KINETIS_L)
 #include "mcu/clk_gpio_init-mkl27z.c"
 #else
-#include "mcu/clk_gpio_init-stm32.c"
+#include "mcu/clk_gpio_init-stm32f103.c"
 #endif
 #endif
 
