@@ -3,9 +3,16 @@
 #include <string.h>
 #include <chopstx.h>
 
-#include "sys.h" /* for set_led */
 #include "usb_lld.h"
 #include "tty.h"
+
+/* For set_led */
+#include "board.h"
+#ifdef MCU_KINETIS_L
+#include "mcu/sys-mkl27z.h"
+#else
+#include "mcu/sys-stm32f103.h"
+#endif
 
 static chopstx_mutex_t mtx;
 static chopstx_cond_t cnd0;
