@@ -30,10 +30,10 @@ SECTIONS
 	KEEP(*(.sys.version))
 	KEEP(*(.sys.board_id))
 	KEEP(*(.sys.board_name))
-	build/sys.o(.text)
-	build/sys.o(.text.*)
-	build/sys.o(.rodata)
-	build/sys.o(.rodata.*)
+	build/sys-*.o(.text)
+	build/sys-*.o(.text.*)
+	build/sys-*.o(.rodata)
+	build/sys-*.o(.rodata.*)
 	. = ALIGN(1024);
 	*(.sys.0)
 	*(.sys.1)
