@@ -1,5 +1,17 @@
 2016-05-30  NIIBE Yutaka  <gniibe@fsij.org>
 
+	* example-cdc: Update.
+
+2016-05-30  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* mcu/adc-mkl27z.c, mcu/sys-mkl27z.c, mcu/usb-mkl27z.c: Moved from
+	example-fs-bb48.
+
+	* mcu/adc-stm32f103.c, mcu/sys-stm32f103.c, mcu/usb-stm32f103.c:
+	Moved from example-cdc.
+
+2016-05-30  NIIBE Yutaka  <gniibe@fsij.org>
+
 	* example-fs-bb48/sys.c (flash_do_internal, flash_do)
 	(flash_erase_page, flash_program_word): New.
 	* example-fs-bb48/command.c (cmd_fes, cmd_fww): New.
